--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,117 +1,151 @@
-<!DOCTYPE html>
-<html>
-
+<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-	<link rel="shortcut icon" href="/favicon.ico" />
-	<title>
-		Aleph's Website
-	</title>
-	<meta name="title" content="Aleph's Website: Cartoons, animations and more." />
-	<meta property="og:site_name" content="Aleph's Website" />
+<!-- InstanceBeginEditable name="SEO" -->
+<title>Aleph's Website.</title>
+<link rel="canonical" href="linkhere">
+<!-- InstanceEndEditable -->
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<meta http-equiv="Content-Type" content="text/html;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style type="text/css" id="dontedit">
+  <!--
+  .hapellrollover {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 112px;
+    height: 126px;
+  }
+  -->
+</style>
+<script language="JavaScript">
+<!--
+<!-- hide
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
 
-	<meta name="description"
-		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
-	<meta property="og:description"
-		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
-	<meta property="og:type" content="website" />
+// stop hiding -->
 
-	<meta charset="utf-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
 
-	<link rel="canonical" href="https://badbunsen.com/" />
+function MM_nbGroup(event, grpName) { //v3.0
+  var i,img,nbArr,args=MM_nbGroup.arguments;
+  if (event == "init" && args.length > 2) {
+    if ((img = MM_findObj(args[2])) != null && !img.MM_init) {
+      img.MM_init = true; img.MM_up = args[3]; img.MM_dn = img.src;
+      if ((nbArr = document[grpName]) == null) nbArr = document[grpName] = new Array();
+      nbArr[nbArr.length] = img;
+      for (i=4; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+        if (!img.MM_up) img.MM_up = img.src;
+        img.src = img.MM_dn = args[i+1];
+        nbArr[nbArr.length] = img;
+    } }
+  } else if (event == "over") {
+    document.MM_nbOver = nbArr = new Array();
+    for (i=1; i < args.length-1; i+=3) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = (img.MM_dn && args[i+2]) ? args[i+2] : args[i+1];
+      nbArr[nbArr.length] = img;
+    }
+  } else if (event == "out" ) {
+    for (i=0; i < document.MM_nbOver.length; i++) {
+      img = document.MM_nbOver[i]; img.src = (img.MM_dn) ? img.MM_dn : img.MM_up; }
+  } else if (event == "down") {
+    if ((nbArr = document[grpName]) != null)
+      for (i=0; i < nbArr.length; i++) { img=nbArr[i]; img.src = img.MM_up; img.MM_dn = 0; }
+    document[grpName] = nbArr = new Array();
+    for (i=2; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = img.MM_dn = args[i+1];
+      nbArr[nbArr.length] = img;
+  } }
+}
 
-	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
-	<link rel="stylesheet" href="stuff/stylesheets/rootindex.css" />
- 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+//-->
+</script>
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable --><!-- InstanceParam name="bgcolobg_color" type="color" value="#6699CC" -->
 </head>
-
-<body>
-
-<div width="100%" height="32" style="background-color: #fc0;"><a href="markup_fireworks.html">Here's 
-  a sample of the next design that's coming up. it's not mobile friendly...</a></div>
-
-	<table width="100%" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-	  <tr>
-		<td align="middle">&nbsp;</td>
-	  </tr>
-	  <tr>
-		<td align="middle">
-		<!--contents of page-->
-		<table width="360" border="0" align="center" cellpadding="0" cellspacing="0">
-		<tr>
-		<td><img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.gif"
-		width="177" height="177" alt="blah guy" class="logo"></td>
-		<td><img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.gif"
-		width="177" height="177" alt="blah guy" class="logo"></td>
-		</tr>
-		<tr>
-		<td><div class="navlinks">
-			&#x2196; <a href="art.html">art</a><br />
-			&#x2196; <a href="video.html">video</a><br />
-			&#x2196; <a href="char.html">characters</a><br />
-			&#x2196; <a href="blog.html" target="_blank">blog</a><br />
-			&#x2196; <a href="bio.html">bio</a><br />
-			&#x2196; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
-			&#x2196; <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
-		</div></td>
-		<td><div class="copybox">
-			<p class="copyright">
-				<strong>copyright info</strong>
-				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. 
-				All rights reserved.<br />
-				This site is DMCA protected.<br />
-				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-					title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
-					<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-						alt="DMCA.com Protection Status" />				</a>
-				<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
-				</script>
-			</p>
-		</div></td>
-		</tr>
-		</table>
-		<!--end contents of page-->
-		</td>
-	  </tr>
-	  <tr>
-		<td align="middle">&nbsp;</td>
-	  </tr>
-</table>
-
-	
-	<!--hcard follies-->
-	<div style="display: none;">
-		<div class="h-card">
-			<!--my persona's pfp-->
-			<img class="u-photo" src="https://badbunsen.com/stuff/grafx/clipart/pfp.png"
-				alt="An image of my persona" />
-			<!--My name and my website (which you're currently viewing)
-				 -->
-			<a class="p-name u-url" rel="me" href="https://badbunsen.com/">Aleph Diallo</a>
-			<!--little note-->
-			<p class="p-note">Cartoonist with a webpage.</p>
-		</div>
-		<!--indieauth uses real social media handles to get people to login
-		to their services. this should also be hidden...-->
-		<div class="indieweb-auth">
-			<!--github-->
-			<a href="https://github.com/badbunsen" rel="me">@badbunsen on Github</a>
-			<!--tumblr-->
-			<a href="https://badbunsen.tumblr.com" rel="me">BadBunsen on Tumblr</a>
-			<!--i'm not active on twitter, like, at all, but it's cool to have 
-				just in case, i guess-->
-			<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
-			<!-- instagram because... uhh... -->
-			<a href="https://instagram.com/badbunsen" rel="me">badbunsen.com on Instagram</a>
-			<!--might post on youtube someday-->
-			<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
-			<!--email-->
-			<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
-			<!--deviantart-->
-			<a href="https://deviantart.com/badbunsenagain" rel="me">BadBunsenAgain on DeviantArt</a>
-		</div>
-</div>
+<body bgcolor="#6699CC" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif','stuff/grafx/sitegrafx/navbar/video_02.gif')" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
+<table width="580" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="142" align="left" valign="top">
+	  <table width="142" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="142"><a href="#" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></td>
+        </tr>
+        <tr>
+          <td><table border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td valign="top" align="left"><a href="javascript:;" target="_top" onClick="MM_nbGroup('down','group1','art','',1)" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+            </tr>
+            <tr>
+              <td valign="top" align="left"><a href="/video.html" target="_top" onClick="MM_nbGroup('down','group1','video','',1)" onMouseOver="MM_nbGroup('over','video','stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+            </tr>
+            <tr>
+              <td valign="top" align="left"><a href="/char.html" target="_top" onClick="MM_nbGroup('down','group1','chardata','',1)" onMouseOver="MM_nbGroup('over','chardata','stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+            </tr>
+  <td valign="top" align="left"><a href="/blog/" target="_top" onClick="MM_nbGroup('down','group1','blog','',1)" onMouseOver="MM_nbGroup('over','blog','stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  </tr>
+  <td valign="top" align="left"><a href="/bio.html" target="_top" onClick="MM_nbGroup('down','group1','bio','',1)" onMouseOver="MM_nbGroup('over','bio','stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  <tr>
+    <td valign="top" align="left"><a href="/archive/" target="_top" onClick="MM_nbGroup('down','group1','archive','',1)" onMouseOver="MM_nbGroup('over','archive','stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left"><a href="/appn.html" target="_top" onClick="MM_nbGroup('down','group1','appendix','',1)" onMouseOver="MM_nbGroup('over','appendix','stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  </tr>
+          </table></td>
+        </tr>
+        <tr>
+          <td><table width="143" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+              <td width="92" align="center" valign="middle"><a href="http://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+					title="DMCA.com Protection Status" class="dmca-badge" target="_blank" width="100%"><img src="http://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+						alt="DMCA.com Protection Status" /></a></td>
+              <td width="51" align="right" valign="top"><img name="navbar_title" src="stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
+            </tr>
+          </table></td>
+        </tr>
+        <tr>
+          <td><p><font size="-3">Aleph's Website media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. All rights reserved.</font></p>
+            <p><img src="stuff/grafx/buttons/viewdesktop_88x31.gif" width="88" height="31"><br>
+                <img src="stuff/grafx/buttons/mwm_dw_88x31.gif" width="88" height="31"><br>
+          <img src="stuff/grafx/buttons/mwm_fw_88x31.gif" width="88" height="31"></p></td>
+        </tr>
+      </table>
+	</td>
+    <td align="left" valign="top"><table width="438" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td><table width="438" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td><img name="wordmark" src="stuff/grafx/sitegrafx/maindesign/wordmark.gif" width="301" height="80" border="0"></td>
+          </tr>
+          <tr>
+            <td><img name="shitspace" src="stuff/grafx/sitegrafx/maindesign/shitspace.gif" width="301" height="76" border="0"></td>
+          </tr>
+        </table></td>
+      </tr>
+      <tr>
+        <td><!-- InstanceBeginEditable name="content" -->Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text.<!-- InstanceEndEditable --></td>
+      </tr>
+    </table></td>
+  </tr>
+</table> 
+<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a>
 </body>
-
-</html>
+<!-- InstanceEnd --></html>
