but now the links are fucked! also only now realizing that clicking the navlink removes its image altogether

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -87,27 +87,27 @@ function MM_findObj(n, d) { //v4.01
     <td width="142" align="left" valign="top">
 	  <table width="142" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="142"><a href="#" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></td>
+          <td width="142"><a href="/" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></td>
         </tr>
         <tr>
           <td><table border="0" cellpadding="0" cellspacing="0">
             <tr>
-              <td width="142" align="left" valign="top"><a href="javascript:;" target="_top" onClick="MM_nbGroup('down','group1','art','',1)" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td width="142" align="left" valign="top"><a href="/art.html" target="_top" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
             <tr>
-              <td valign="top" align="left"><a href="/video.html" target="_top" onClick="MM_nbGroup('down','group1','video','',1)" onMouseOver="MM_nbGroup('over','video','stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td valign="top" align="left"><a href="/video.html" target="_top" onMouseOver="MM_nbGroup('over','video','stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
             <tr>
-              <td valign="top" align="left"><a href="/char.html" target="_top" onClick="MM_nbGroup('down','group1','chardata','',1)" onMouseOver="MM_nbGroup('over','chardata','stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+              <td valign="top" align="left"><a href="/char.html" target="_top" onMouseOver="MM_nbGroup('over','chardata','stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
-  <td valign="top" align="left"><a href="/blog/" target="_top" onClick="MM_nbGroup('down','group1','blog','',1)" onMouseOver="MM_nbGroup('over','blog','stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  <td valign="top" align="left"><a href="/blog/" target="_top" onMouseOver="MM_nbGroup('over','blog','stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
-  <td valign="top" align="left"><a href="/bio.html" target="_top" onClick="MM_nbGroup('down','group1','bio','',1)" onMouseOver="MM_nbGroup('over','bio','stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+  <td valign="top" align="left"><a href="/bio.html" target="_top" onMouseOver="MM_nbGroup('over','bio','stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   <tr>
-    <td valign="top" align="left"><a href="/archive/" target="_top" onClick="MM_nbGroup('down','group1','archive','',1)" onMouseOver="MM_nbGroup('over','archive','stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+    <td valign="top" align="left"><a href="/archive/" target="_top" onMouseOver="MM_nbGroup('over','archive','stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
   <tr>
-    <td valign="top" align="left"><a href="/appn.html" target="_top" onClick="MM_nbGroup('down','group1','appendix','',1)" onMouseOver="MM_nbGroup('over','appendix','stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+    <td valign="top" align="left"><a href="/appn.html" target="_top" onMouseOver="MM_nbGroup('over','appendix','stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
   </tr>
           </table></td>
         </tr>
