--- a/sitedir/char.html
+++ b/sitedir/char.html
@@ -93,15 +93,15 @@ function MM_findObj(n, d) { //v4.01
 <!-- InstanceEndEditable --><!-- InstanceParam name="bgcolobg_color" type="color" value="#FFCC00" -->
 </head>
 <body bgcolor="#FFCC00" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif','stuff/grafx/sitegrafx/navbar/video_02.gif')" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
-<table width="580" border="0" cellspacing="0" cellpadding="0">
+<table width="580" border="0">
   <tr>
     <td width="142" align="left" valign="top">
-	  <table width="142" border="0" cellspacing="0" cellpadding="0">
+	  <table width="142" border="0" cellspacing="0">
         <tr>
-          <td width="142"><a href="/" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></td>
+          <td width="142" align="center" valign="middle"><div align="center"><a href="/" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo1','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img src="stuff/grafx/sitegrafx/maindesign/logo.gif" name="logo1" width="142" height="229" border="0" id="logo1"></a></div></td>
         </tr>
         <tr>
-          <td><table border="0" cellpadding="0" cellspacing="0">
+          <td align="center" valign="middle"><table border="0" cellspacing="0" cellpadding="0">
             <tr>
               <td width="142" align="left" valign="top"><a href="/art.html" target="_top" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
             </tr>
@@ -123,11 +123,11 @@ function MM_findObj(n, d) { //v4.01
           </table></td>
         </tr>
         <tr>
-          <td><table width="141" border="0" cellspacing="0" cellpadding="0">
+          <td><table width="141" border="0" cellspacing="0">
             <tr>
               <td width="90" align="center" valign="middle"><a href="http://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 					title="DMCA.com Protection Status" class="dmca-badge" target="_blank" width="100%"><img src="http://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-						alt="DMCA.com Protection Status" /></a></td>
+						alt="DMCA.com Protection Status" width="100$"/></a></td>
               <td width="51" align="right" valign="top"><img name="navbar_title" src="stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
             </tr>
           </table></td>
@@ -140,9 +140,9 @@ function MM_findObj(n, d) { //v4.01
         </tr>
       </table>
 	</td>
-    <td align="left" valign="top"><table width="438" border="0" cellspacing="0" cellpadding="0">
+    <td align="left" valign="top"><table width="438" border="0" cellspacing="0">
       <tr>
-        <td><table width="438" border="0" cellspacing="0" cellpadding="0">
+        <td><table width="438" border="0" cellspacing="0">
           <tr>
             <td><img name="wordmark" src="stuff/grafx/sitegrafx/maindesign/wordmark.gif" width="301" height="80" border="0"></td>
           </tr>
